<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailsActivity"
    android:background="@color/cream">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Design.Light.NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cream">

                <ImageView
                    android:id="@+id/header_poster"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:srcCompat="@drawable/poster_aquaman" />

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="130dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="130dp"
                    android:contentDescription="@string/poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/poster_infinity_war" />


                <TextView
                    android:id="@+id/view_title"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toEndOf="@+id/poster"
                    app:layout_constraintTop_toBottomOf="@+id/header_poster"
                    tools:text="@string/text_tittle" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/poster"
                    app:layout_constraintTop_toBottomOf="@id/view_title" />

                <TextView
                    android:id="@+id/text_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
                    app:layout_constraintStart_toEndOf="@+id/poster"
                    app:layout_constraintTop_toBottomOf="@+id/view1"
                    tools:text="Rating" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_rating"
                    app:layout_constraintStart_toEndOf="@+id/text_rating"
                    app:layout_constraintTop_toTopOf="@+id/text_rating"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/view_rating" />

                <TextView
                    android:id="@+id/text_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_baseline_movie_filter_24"
                    app:layout_constraintStart_toEndOf="@+id/poster"
                    app:layout_constraintTop_toBottomOf="@+id/text_rating"
                    tools:text="Genre" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_genre"
                    app:layout_constraintStart_toEndOf="@+id/text_genre"
                    app:layout_constraintTop_toTopOf="@+id/text_genre"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/view_genre" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                app:titleTextColor="@android:color/black" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="761dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/overview"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/view_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/amiri"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/overview"
                        tools:text="@string/view_overview" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>